# grapevine-sonobe

./: Cargo.toml
circom/: compile.sh  grapevine.circom  inputs.json  witness.wtns
circom/artifacts/: grapevine.r1cs  grapevine.wasm
src/: circom.rs  errors.rs  lib.rs  nova.rs  params.rs
src/utils/: inputs.rs  mod.rs  wrapper.rs
