[package]
name = "grapevine_sonobe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-pallas = { version = "0.4.0", features = ["r1cs"] }
ark-vesta = {version="0.4.0", features=["r1cs"]}
ark-circom = { git = "https://github.com/arnaucube/circom-compat.git" }
ark-ec = "0.4.1"
ark-ff = "0.4.1"
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = [
    "r1cs",
    "sponge",
    "crh",
] }
ark-std = "0.4.0"
color-eyre = "0.6.2"
num-bigint = "0.4.3"
sonobe = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "folding-schemes", branch = "main" }
serde = "1.0.198"
serde_json = "1.0.116"

[dev-dependencies]
lazy_static = "1.4.0"
